@@ -1,18 +1,18 @@
 #!/usr/bin/python3
 
 from email.utils import parseaddr
-from lintian_brush.control import update_control
+from lintian_brush.control import ControlUpdater
 
 
-def drop_uploaders(control):
-    if parseaddr(control["Maintainer"])[1] != 'packages@qa.debian.org':
-        return
-    try:
-        del control["Uploaders"]
-    except KeyError:
-        pass
+with ControlUpdater() as updater:
+    if ("Maintainer" in updater.source and
+            parseaddr(updater.source["Maintainer"])[1] ==
+            'packages@qa.debian.org'):
+        try:
+            del updater.source["Uploaders"]
+        except KeyError:
+            pass
 
 
-update_control(source_package_cb=drop_uploaders)
 print("Remove uploaders from orphaned package.")
 print("Fixed-Lintian-Tags: orphaned-package-should-not-have-uploaders")
